# NeMo-Agent-Toolkit-Examples

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .vale.ini  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci_pipe.yml
ci/: markdown-link-check-config.json
ci/scripts/: bootstrap_local_ci.sh  checks.sh  common.sh  copyright.py  gitutils.py  python_checks.sh  run_ci_local.sh
ci/scripts/github/: checks.sh  common.sh
examples/.template/: README.md  TEMPLATE_USAGE.md  configs  data  pyproject.toml
examples/.template/scripts/: README.md  setup.sh
examples/.template/src/nat_template/: register.py
examples/.template/src/nat_template/configs/: config.yml
examples/.template/src/nat_template/data/: README.md  sample_data.json
